# mcp_camsnap

./: README.md  mcp_camsnap.py  pyproject.toml
src/camsnap_mcp/: server.py
