[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-camsnap"
version = "0.1.3" # Bumped version for fix
description = "MCP server for camsnap"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "pillow"   # <--- AGGIUNGI QUESTA
]

[project.scripts]
mcp-camsnap = "camsnap_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/camsnap_mcp"]